# rustweb-test-game

./: Cargo.toml
src/: main.rs  misc.rs  physics.rs  physics_infrastructure.rs  ui.rs
static/: index.html
