[package]
name = "rustweb-test-game"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]

[dependencies]
stdweb = "0.3"
serde = "1"
serde_derive = "1"
nalgebra = {version = "0.13", features = ["serde-serialize"]}
array_ext = "0.2"
dimensioned = "0.6"
time_steward = {git = "https://github.com/elidupree/time-steward"}
rand = "0.3"
boolinator = "2.4"
derivative = "1.0"
